# mullvad4docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
controller/: Cargo.toml
controller/src/: config.rs  killswitch.rs  lib.rs  main.rs  mtu.rs  uapi.rs
scripts/: test_killswitch.sh
src/: entrypoint.sh
src/dante/: sockd.conf
